<resources>
    <string name="app_name">MyNewsFeed</string>
    <string name="news_type">type</string>
    <string name="section_name">Section Name Placeholder</string>
    <string name="author_name">Author Name Placeholder</string>
    <string name="article_name">Article Name Placeholder</string>
    <string name="date">Jan 1, 2018</string>
    <string name="time"> 12:00 AM</string>
    <!-- Text to display in the list when there are no earthquakes [CHAR LIMIT=NONE] -->
    <string name="no_newsreports">No newsreports found.</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>
</resources>
